--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
          <h2 class="sec_title">Some awesone features</h2>
          <div class="features">
             <div class="features__item">
-               <img src="/img/fiture-one.png" alt="">
+               <img src="img/fiture-one.png" alt="">
                <h4 class="feature_title">Some awesone features</h4>
                <p class="feature_subtitle">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
             </div>
             <div class="features__item features__item_middle">
-               <img src="/img/fiture-two.png" alt="">
+               <img src="img/fiture-two.png" alt="">
                <h4 class="feature_title">Some awesone features</h4>
                <p class="feature_subtitle">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
             </div>
             <div class="features__item">
-               <img src="/img/fiture-three.png" alt="">
+               <img src="img/fiture-three.png" alt="">
                <h4 class="feature_title">Some awesone features</h4>
                <p class="feature_subtitle">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
             </div>
@@ -55,7 +55,7 @@
    </section>
    <section class="responsive_section">
       <div class="container">
-         <img src="/img/macbook.png" alt="" class="macbook">
+         <img src="img/macbook.png" alt="" class="macbook">
          <div class="responsive">
             <span class="sec_subtitle">New design</span>
             <h2 class="sec_title">Resposive design, just need your tap <span>....</span></h2>
@@ -87,19 +87,19 @@
          </div>
          <div class="partners">
             <div class="partners__item">
-               <img src="/img/partner-logo-1.png" alt="">
+               <img src="img/partner-logo-1.png" alt="">
             </div>
             <div class="partners__item">
-               <img src="/img/partner-logo-2.png" alt="">
+               <img src="img/partner-logo-2.png" alt="">
             </div>
             <div class="partners__item">
-               <img src="/img/partner-logo-3.png" alt="">
+               <img src="img/partner-logo-3.png" alt="">
             </div>
             <div class="partners__item">
-               <img src="/img/partner-logo-4.png" alt="">
+               <img src="img/partner-logo-4.png" alt="">
             </div>
             <div class="partners__item">
-               <img src="/img/partner-logo-5.png" alt="">
+               <img src="img/partner-logo-5.png" alt="">
             </div>
          </div>
       </div>
@@ -109,7 +109,7 @@
          <span class="sec_subtitle">New features</span>
          <h2 class="sec_title">Some awesone features</h2>
          <p class="sec_desc">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</p>
-         <img src="/img/browser.png" alt="" class="browser">
+         <img src="img/browser.png" alt="" class="browser">
       </div>
    </section>
    <section class="reg_section">
@@ -122,7 +122,7 @@
                <input type="password" placeholder="PASSWORD">
                <a href="#" class="submit">Try now</a>
             <div class="trial">
-               <img src="/img/arrow.png" alt="">
+               <img src="img/arrow.png" alt="">
                <span>30 days free trial for all.</span>
             </div>
          </form>
@@ -132,7 +132,7 @@
    <footer>
       <div class="container">
          <div class="company">
-            <img src="/img/logo.png" alt="">
+            <img src="img/logo.png" alt="">
             <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam.<br>
                USA &  CAN: 1-888-123-4567<br>
                Address: 34 Brokel Rd. NY
