--- a/index.html
+++ b/index.html
@@ -160,22 +160,19 @@
             <a href="#" class="send"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></a>
             <div class="socials">
                <div class="socials__item">
-                  <a href="#"><i class="fa fa-futbol-o" aria-hidden="true"></i></a>
+                  <a href="https://freelancehunt.com/freelancer/i__loading.html" target="_blank"><img src="img/fh.png" alt=""></a>
                </div>
                <div class="socials__item">
-                  <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                  <a href="https://www.fl.ru/users/vana20915/portfolio/" target="_blank"><img src="img/fl.ico" alt=""></a>
                </div>
                <div class="socials__item">
-                  <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-               </div>
-               <div class="socials__item">
-                  <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                  <a href="https://freelance.ru/iloading" target="_blank"><img src="img/flru.png" alt=""></a>
                </div>
             </div>
          </div>
       </div>
    </footer>
+   <script src="https://use.fontawesome.com/623e16bcc9.js"></script>
+   
 </body>
-
-<script src="https://use.fontawesome.com/623e16bcc9.js"></script>
 </html>
